2011-02-19  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/utils.jl: improved two strings

2011-02-18  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: - support tabbed windows in
	send-to/copy-to-next/previous-workspace
	- add tab-group-window-index function
	- don't add a window to tabgroup, if it already exists on another
	workspace
	-- [fuchur]

	* lisp/sawfish/wm/keymaps.jl: more natural keymap for raise-lower-button
	-- [fuchur]

	* themes/StyleTab/theme.jl: - make use of tab-group-window-index
	- update send-to-prev/next button after action performed
	-- [fuchur]

2011-02-16  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tabgroup.jl: - make sure we only call the
	tab-hooks if the window is actually tabbed
	- in tab-refresh-group rename the reframe-style property to style
	- use reframe-window rather than rebuild-frame in tab-refresh-group for type property
	- make tab-group-window with non-click focus-modes work (regression)
	- make sure already tabbed windows, can be added to a different tab-group
	-- [fuchur]

	* lisp/sawfish/wm/keymaps.jl: improved default bindings for tabbar [fuchur]

	* themes/StyleTab/theme.jl: - make Button2-Off for menu-button work
	- add call-after-state-changed for sticky, fixed-position and stacking
	properties [fuchur]

	* themes/Elberg-tabbed/theme.jl
	* themes/get-S-tabbed/theme.jl: removed old comment [fuchur]

2011-02-13  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/actions.jl: don't call edge-action for
	non-dragging, while moving a window. Else both edge-actions would be
	called, which would mess up things.

	* themes/StyleTab/theme.jl: - option for choosing titlebar-font, (independent
	of prompt/message font)
	- make commands for moving tabbars accessible to the keyboard (tabbar-move-to-top/bottom/left/right)
	- rewrote code for frametype-button