@@ -330,7 +330,7 @@ generate.")
 
   (define (reframe-window w)
     (require 'sawfish.wm.tabs.tabgroup)
-    (adjustment-title w)
+    (adjust-title w)
     (if (window-get w 'ignored)
 	(progn
 	  (window-put w 'current-frame-style nil)
