@@ -2,6 +2,10 @@
 	* lisp/sawfish/wm/edge/actions.jl
 	* lisp/sawfish/wm/edge/utils.jl: improved two strings
 
+	* lisp/sawfish/wm/frames.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl: renamed adjustment-title to
+	adjust-title
+
 2011-02-18  Christopher Roy Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/workspace.jl
 	* lisp/sawfish/wm/tabs/tabgroup.jl: - support tabbed windows in
